--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <body>
          <ul>
              <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page2.html">Music</a></li>
-             <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page3.html">Movies</a></li>
+             <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
              <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page4.html">Sports</a></li>
 
          </ul>
