--- a/page4.html
+++ b/page4.html
@@ -47,9 +47,9 @@
 
     <body>
         <ul>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/index.html">Home</a></li>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page2.html">Music</a></li>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page3.html">Movies</a></li>
+            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/index.html">Home</a></li>
+            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page2.html">Music</a></li>
+            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
 
         </ul>
 
