--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </head>
     <body>
          <ul>
-             <li><a href="aksandeep95.github.io/page2.html">Music</a></li>
+             <li><a href="aksandeep95.github.io/blob/master/page2.html">Music</a></li>
              <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
              <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page4.html">Sports</a></li>
 
