--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <body>
          <ul>
              <li><a href="page2.html">Music</a></li>
-             <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
-             <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page4.html">Sports</a></li>
+             <li><a href="page3.html">Movies</a></li>
+             <li><a href="page4.html">Sports</a></li>
 
          </ul>
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
