--- a/page2.html
+++ b/page2.html
@@ -55,9 +55,9 @@
 
     <body>
         <ul>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/index.html">Home</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page4.html">Sports</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page3.html">Movies</a></li>
+            <li><a href="page4.html">Sports</a></li>
 
 
         </ul>
