--- a/page2.html
+++ b/page2.html
@@ -55,9 +55,9 @@
 
     <body>
         <ul>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/index.html">Home</a></li>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page3.html">Movies</a></li>
-            <li><a href="https://766ae8d6-3135-4383-b2e5-10b26ab20d13-ide.cs50.xyz:8080/page4.html">Sports</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page3.html">Movies</a></li>
+            <li><a href="page4.html">Sports</a></li>
 
 
         </ul>
