--- a/page3.html
+++ b/page3.html
@@ -53,9 +53,9 @@
 
 
         <ul>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/index.html">Home</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page2.html">Music</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page4.html">Sports</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">Music</a></li>
+            <li><a href="page4.html">Sports</a></li>
 
 
         </ul>
