--- a/page4.html
+++ b/page4.html
@@ -47,9 +47,9 @@
 
     <body>
         <ul>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/index.html">Home</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page2.html">Music</a></li>
-            <li><a href="https://github.com/aksandeep95/aksandeep95.github.io/blob/master/page3.html">Movies</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">Music</a></li>
+            <li><a href="page3.html">Movies</a></li>
 
         </ul>
 
